--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="screen">0</div>
         <div class="buttonsAll" id="buttonsAll">
             <button id="buttonAC">AC</button>
-            <button id="buttonMinPlus">+/-</button>
+            <button id="buttonMinPlus">±</button>
             <button id="buttonPer">%</button>
             <button id="buttonDiv">÷</button>
             <button id="button7">7</button>
