--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="signal"> <i class="fa-solid fa-signal"></i></div>
         <div id="wifi"> <i class="fa-solid fa-wifi"></i></div>
         <div id="battery"><i class="fa-sharp fa-solid fa-battery-full"></i></div>
-        <div id="screen">0</div>
+        <input type="text" id="screen"></input>
         <div class="buttonsAll" id="buttonsAll">
             <button id="buttonAC">AC</button>
             <button id="buttonMinPlus">±</button>
