--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iPhone Calculator </title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">   
 </head>
 <body>
     <div class="container" id="container">
@@ -21,7 +20,7 @@
         <div id="signal"> <i class="fa-solid fa-signal"></i></div>
         <div id="wifi"> <i class="fa-solid fa-wifi"></i></div>
         <div id="battery"><i class="fa-sharp fa-solid fa-battery-full"></i></div>
-        <input type="text" id="screen"></input>
+        <input type="text" class="input"/>
         <div class="buttonsAll" id="buttonsAll">
             <button id="buttonAC">AC</button>
             <button id="buttonMinPlus">±</button>
@@ -46,5 +45,6 @@
         <div id="bar"></div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
