--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="signal"> <i class="fa-solid fa-signal"></i></div>
         <div id="wifi"> <i class="fa-solid fa-wifi"></i></div>
         <div id="battery"><i class="fa-sharp fa-solid fa-battery-full"></i></div>
-        <input type="text" class="input"/>
+        <input type="text" id ="screen"/>
         <div class="buttonsAll" id="buttonsAll">
             <button id="buttonAC">AC</button>
             <button id="buttonMinPlus">±</button>
