Added Zero button logic

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="signal"> <i class="fa-solid fa-signal"></i></div>
         <div id="wifi"> <i class="fa-solid fa-wifi"></i></div>
         <div id="battery"><i class="fa-sharp fa-solid fa-battery-full"></i></div>
-        <input type="text" id ="screen"/>
+        <input type="text" id ="screen" value="0"/>
         <div class="buttonsAll" id="buttonsAll">
             <button id="buttonAC">AC</button>
             <button id="buttonMinPlus">±</button>
@@ -34,7 +34,7 @@
             <button id="button5">5</button>
             <button id="button6">6</button>
             <button id="buttonMinus">-</button>
-            <button id="button1" onclick="one()">1</button>
+            <button id="button1">1</button>
             <button id="button2">2</button>
             <button id="button3">3</button>
             <button id="buttonPlus">+</button>
