--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
         <div class="buttonsAll" id="buttonsAll">
             <button id="buttonAC">AC</button>
             <button id="buttonMinPlus">±</button>
-            <button id="buttonPer">%</button>
-            <button id="buttonDiv">÷</button>
+            <button id="buttonPer" data-action="percentage">%</button>
+            <button id="buttonDiv" data-action="divide">÷</button>
             <button id="button7">7</button>
             <button id="button8">8</button>
             <button id="button9">9</button>
-            <button id="buttonMul">X</button>
+            <button id="buttonMul" data-action="multiple">X</button>
             <button id="button4">4</button>
             <button id="button5">5</button>
             <button id="button6">6</button>
-            <button id="buttonMinus">-</button>
+            <button id="buttonMinus" data-action="minus">-</button>
             <button id="button1">1</button>
             <button id="button2">2</button>
             <button id="button3">3</button>
-            <button id="buttonPlus">+</button>
+            <button id="buttonPlus" data-action="plus">+</button>
             <button id="buttonZero">0</button>
             <button id="buttonDot">.</button>
-            <button id="buttonEqual">=</button>
+            <button id="buttonEqual" data-action="equals">=</button>
         </div>
         <div id="bar"></div>
         </div>
